# nvml-ocsd-reporter

./: Cargo.toml  README.md
debian/: service
src/: main.rs
